[gd_scene load_steps=5 format=3 uid="uid://interaction_prompt_ui"]

[ext_resource type="Script" path="res://scripts/InteractionPromptUI.gd" id="1_w2aby"]

[node name="InteractionPromptUI" type="CanvasLayer"]
layer = 45
script = ExtResource("1_w2aby")

[node name="Container" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 190.0

[node name="PromptPanel" type="PanelContainer" parent="Container"]
visible = false
self_modulate = Color(1, 1, 1, 0.85)

[node name="Margins" type="MarginContainer" parent="Container/PromptPanel"]
custom_constants/margin_left = 8
custom_constants/margin_top = 8
custom_constants/margin_right = 8
custom_constants/margin_bottom = 8

[node name="PromptLabel" type="Label" parent="Container/PromptPanel/Margins"]
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1
